added export to csv button next to  search bar and added headers to it

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,9 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+input:focus {
+  outline: none;
+}
 
 @layer utilities {
   .text-balance {
